# rest-api-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  main.rs
database/: sqlite.rs
handlers/: user.rs
