[package]
name = "rest-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database dependencies
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Additional libraries
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
warp = "0.3.7"

[dev-dependencies]
tokio-test = "0.4"

[patch.crates-io]


[[bin]]
name = "rest-api-rs"
path = "main.rs"