[package]
name = "rest-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
warp = "0.3.7"

[[bin]]
name = "rest-api-rs"
path = "main.rs"