[package]
name = "rest-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
serde_json = "1.0.133"
form_urlencoded = "1.2.1"

[[bin]]
name = "rest-api-rs"
path = "main.rs"